# nyx

./: .gitignore  LICENSE  Makefile  README.md  RELEASE_NOTES.rst  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.rst  nyx.core.rst  nyx.editor.widgets.menubar_menus.rst  nyx.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  nyx.core.doctree  nyx.doctree  nyx.editor.doctree  nyx.editor.graphics.doctree  nyx.editor.views.doctree  nyx.editor.widgets.doctree  nyx.editor.widgets.menubar_menus.doctree  nyx.utils.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  nyx.core.html  nyx.editor.graphics.html  nyx.editor.html  nyx.editor.views.html  nyx.editor.widgets.html  nyx.editor.widgets.menubar_menus.html  nyx.html  nyx.utils.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/nyx/: __init__.py  _version.py  application.py  main.py
src/nyx/core/: __init__.py  _invertible_dict.py  application.py  attribute.py  commands.py  config.py  constants.py  links.py  node.py  nyx_exceptions.py  resolver.py  serializable.py  stage.py  stage_executor.py  stage_handler.py
src/nyx/core/controllers/: node.py  (+1 more)
src/nyx/editor/: main_window.py
src/nyx/utils/: file_fn.py  inspect_fn.py  logging_fn.py  path_fn.py  pyside_fn.py
src/nyx/widgets/: stage_tree_widget.py
tests/: conftest.py  test_attribute.py  test_logging.py  test_node.py  test_project.py  test_resolver.py  test_stage.py  test_stage_executor.py  test_stage_handler.py
(+68 files in other folders)
