[metadata]
name = nyx
version = 0.0.1
author = Dmitrii Shevchenko
description = Python execution graph
platforms = unix, linux, osx, cygwin, win32
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

url = https://github.com/sowwic/nyx
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    python-dotenv>=0.19.2
    PySide2>=5.15.2.1
    shiboken2>=5.15.2.1
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    PySide2>=5.15.2.1
    shiboken6>=5.15.2.1

[flake8]
max-line-length = 160

[options.package_data]
nyx = py.typed